fix problem with ownership and persistence, and fix some sonarqube findings